--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 explosion.style.opacity = 1; // Trigger explosion
                 setTimeout(() => {
                     explosion.style.opacity = 0; // Hide explosion
-                    alert("Your love is overflowing! 💖"); // Show a message
+                    alert("I LOVE YOUUU (WISDOWMONKEY IS ME BTW)"); // Show a message
                 }, 500);
             }, 2000); // Wait for the bar to fill
         }
